--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xml:th="http://www.thymeleaf.org" lang="kr">
-<head>
+<head th:replace="fragments/common :: head('게시판')">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Thymeleaf</title>
     <link href="/static/starter-template.css" th:href="@{/static/starter-template.css}" rel="stylesheet">
+    <title>타임리프 게시판</title>
 </head>
 <body>
-
+    <div class="container">
+        <h2>게시판</h2>
+    </div>
 </body>
 </html>
