--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html xml:th="http://www.thymeleaf.org" lang="">
+<head th:fragments="head">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link href="/static/starter-template.css" th:href="@{/static/starter-template.css}" rel="stylesheet">
+    <title>타임리프 게시판</title>
+
+</head>
 <body>
     <div class="col-lg-8 mx-auto p-3 py-md-5" th:fragment="menu">
         <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
