--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,66 +1,59 @@
 <!doctype html>
-<html lang="en">
-<head th:replace="fragments/common :: head('hello spring boot')">
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="fragments/common :: head('Hello, Spring Boot!')">
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="starter-template.css" rel="stylesheet">
 
-    <title>Thymeleaf</title>
-    <link href="/static/starter-template.css" rel="stylesheet">
+    <title>Hello, Spring Boot!</title>
 </head>
+
 <body>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('home')">
+    <!-- <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">홈 <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">게시판</a>
+            </li>
+        </ul>
+    </div> -->
+</nav>
 
-<div class="col-lg-8 mx-auto p-3 py-md-5" th:replace="fragments/common :: menu">
-<!--    <header class="d-flex align-items-center pb-3 mb-5 border-bottom">-->
-<!--        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>-->
-<!--            <span class="fs-4">Starter template</span>-->
-<!--        </a>-->
-<!--    </header>-->
+<main role="main" class="container">
 
-<!--    <main>-->
-<!--        <h1>YOUNGHYUK KIM</h1>-->
-<!--        <p class="fs-5 col-md-8">Spring Boot 를 이용해서 웹 페이지 만들기</p>-->
+    <div class="starter-template">
+        <h1>Srping Boot Tutorial</h1>
+        <p class="lead">Spring Boot을 이용해 웹 페이지 제작<br>
+            Spring Security, JPA를 이용해 보안 설정과 데이터 다루기</p>
+    </div>
 
-<!--        <div class="mb-5">-->
-<!--            <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>-->
-<!--        </div>-->
+</main>
 
-<!--        <hr class="col-3 col-md-2 mb-5">-->
-
-<!--        <div class="row g-5">-->
-<!--            <div class="col-md-6">-->
-<!--                <h2>Starter projects</h2>-->
-<!--                <p>Spring Boot 를 이용해서 웹 페이지 만들기</p>-->
-<!--                <ul class="icon-list">-->
-<!--                    <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>-->
-<!--                    <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-
-<!--            <div class="col-md-6">-->
-<!--                <h2>Guides</h2>-->
-<!--                <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>-->
-<!--                <ul class="icon-list">-->
-<!--                    <li><a href="/docs/5.1/getting-started/introduction/">Bootstrap quick start guide</a></li>-->
-<!--                    <li><a href="/docs/5.1/getting-started/webpack/">Bootstrap Webpack guide</a></li>-->
-<!--                    <li><a href="/docs/5.1/getting-started/parcel/">Bootstrap Parcel guide</a></li>-->
-<!--                    <li><a href="/docs/5.1/getting-started/contribute/">Contributing to Bootstrap</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </main>-->
-<!--    <footer class="pt-5 my-5 text-muted border-top">-->
-<!--        Created by the Bootstrap team &middot; &copy; 2021-->
-<!--    </footer>-->
-</div>
-
-
-<script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
