--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
-<html xml:th="http://www.thymeleaf.org" lang="">
-<head th:fragments="head">
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head(title)">
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
 
-    <link href="/static/starter-template.css" th:href="@{/static/starter-template.css}" rel="stylesheet">
-    <title>타임리프 게시판</title>
-
+    <title th:text="${title}">Hello, Spring Boot!</title>
 </head>
 <body>
-    <div class="col-lg-8 mx-auto p-3 py-md-5" th:fragment="menu">
-        <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-                <span class="fs-4">Starter template</span>
-            </a>
-        </header>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="menu(menu)">
+    <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <main>
-            <h1>YOUNGHYUK KIM</h1>
-            <p class="fs-5 col-md-8">Spring Boot 를 이용해서 웹 페이지 만들기</p>
-
-            <div class="mb-5">
-                <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
-            </div>
-
-            <hr class="col-3 col-md-2 mb-5">
-
-            <div class="row g-5">
-                <div class="col-md-6">
-                    <h2>Starter projects</h2>
-                    <p>Spring Boot 를 이용해서 웹 페이지 만들기</p>
-                    <ul class="icon-list">
-                        <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
-                        <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
-                    </ul>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item" th:classappend="${menu} == 'home'? 'active'">
+                <a class="nav-link" href="#" th:href="@{/}">홈 <span class="sr-only" th:if="${menu} == 'home'">(current)</span></a>
+            </li>
+            <li class="nav-item" th:classappend="${menu} == 'board'? 'active'">
+                <a class="nav-link" href="#" th:href="@{/board/list}">게시판 <span class="sr-only" th:if="${menu} == 'board'">(current)</span></a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-
-                <div class="col-md-6">
-                    <h2>Guides</h2>
-                    <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
-                    <ul class="icon-list">
-                        <li><a href="/docs/5.1/getting-started/introduction/">Bootstrap quick start guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/webpack/">Bootstrap Webpack guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/parcel/">Bootstrap Parcel guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/contribute/">Contributing to Bootstrap</a></li>
-                    </ul>
-                </div>
-            </div>
-        </main>
-        <footer class="pt-5 my-5 text-muted border-top">
-            Created by the Bootstrap team &middot; &copy; 2021
-        </footer>
+            </li> -->
+        </ul>
+        <!-- <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
     </div>
+</nav>
 </body>
 </html>
